--- a/hkvj.ipynb
+++ b/hkvj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f46f9401",
+   "id": "1aa4e1b3",
    "metadata": {},
    "source": [
     "# ⌨️ VS Code Jupyter Notebook 핵심 단축키 요약\n",
@@ -45,9 +45,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18ca8c95",
+   "id": "f46f9401",
    "metadata": {},
-   "source": []
+   "source": [
+    "<!-- # ⌨️ VS Code Jupyter Notebook 핵심 단축키 요약\n",
+    "\n",
+    "주피터 노트북은 **명령 모드(Esc)**와 **편집 모드(Enter)** 두 가지 상태가 있습니다. 이를 구분해서 사용하면 훨씬 빠릅니다.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 1. 셀 실행 및 생성 (가장 중요)\n",
+    "| 단축키 | 기능 |\n",
+    "| :--- | :--- |\n",
+    "| **`Shift + Enter`** | 현재 셀을 실행하고 **다음 셀로 이동** (없으면 생성) |\n",
+    "| **`Ctrl + Enter`** | 현재 셀만 실행하고 해당 위치에 머무름 |\n",
+    "| **`Alt + Enter`** | 현재 셀을 실행하고 **바로 아래에 새 셀 삽입** |\n",
+    "| **`A`** | 현재 셀 **위에** 새 셀 추가 (Above) |\n",
+    "| **`B`** | 현재 셀 **아래에** 새 셀 추가 (Below) |\n",
+    "\n",
+    "## 2. 셀 타입 변경 및 관리\n",
+    "| 단축키 | 기능 |\n",
+    "| :--- | :--- |\n",
+    "| **`M`** | 셀을 **마크다운(문서)** 모드로 변경 |\n",
+    "| **`Y`** | 셀을 **코드(Python)** 모드로 변경 |\n",
+    "| **`D, D`** | 선택한 셀 **삭제** (D를 빠르게 두 번) |\n",
+    "| **`Z`** | 삭제한 셀 되살리기 (Undo) |\n",
+    "| **`L`** | 코드 줄 번호(Line Number) 표시/숨기기 |\n",
+    "\n",
+    "## 3. 편집 및 커널 제어\n",
+    "| 단축키 | 기능 |\n",
+    "| :--- | :--- |\n",
+    "| **`Ctrl + /`** | 선택한 줄 주석 처리/해제 |\n",
+    "| **`Shift + M`** | 선택된 여러 셀을 하나로 합치기 |\n",
+    "| **`I, I`** | 커널 실행 중단 (Interrupt - 무한 루프 시 사용) |\n",
+    "| **`0, 0`** | 커널 재시작 (Restart) |\n",
+    "| **`Esc` / `Enter`** | 명령 모드(파란색 테두리) / 편집 모드(커서 깜빡임) 전환 |\n",
+    "\n",
+    "---\n",
+    "> **💡 팁:** > - 코드 작성 중 함수 뒤에서 **`Shift + Tab`**을 누르면 함수 설명을 볼 수 있습니다.\n",
+    "> - **`Tab`** 키를 누르면 자동 완성이 실행됩니다. -->"
+   ]
   }
  ],
  "metadata": {
