--- a/07_t-test.ipynb
+++ b/07_t-test.ipynb
@@ -1692,7 +1692,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1706,7 +1706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
