--- a/15.다중회귀분석_연습문제_최민식.ipynb
+++ b/15.다중회귀분석_연습문제_최민식.ipynb
@@ -21,7 +21,7 @@
    "id": "fe244ef7",
    "metadata": {},
    "source": [
-    "# 댜중 회귀\n",
+    "# 다중 회귀\n",
     "\n"
    ]
   },
@@ -218,14 +218,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17612\\1009550355.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17268\\1009550355.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df['학과'].replace({1:'학과1', 2:'학과2', 3:'학과3', 4:'학과4'}, inplace = True)\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17612\\1009550355.py:6: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17268\\1009550355.py:6: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -403,17 +403,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17612\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17268\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  results = df.groupby('학과')[num].describe().round(3)\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17612\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17268\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  results = df.groupby('학과')[num].describe().round(3)\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17612\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17268\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  results = df.groupby('학과')[num].describe().round(3)\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17612\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17268\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  results = df.groupby('학과')[num].describe().round(3)\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17612\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17268\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  results = df.groupby('학과')[num].describe().round(3)\n",
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17612\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_17268\\1442997597.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  results = df.groupby('학과')[num].describe().round(3)\n"
      ]
     }
@@ -513,7 +513,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.864\n",
       "Method:                 Least Squares   F-statistic:                     605.4\n",
       "Date:                Fri, 09 Jan 2026   Prob (F-statistic):          1.60e-122\n",
-      "Time:                        17:12:28   Log-Likelihood:                -894.34\n",
+      "Time:                        17:20:45   Log-Likelihood:                -894.34\n",
       "No. Observations:                 286   AIC:                             1797.\n",
       "Df Residuals:                     282   BIC:                             1811.\n",
       "Df Model:                           3                                         \n",
@@ -624,6 +624,34 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "e025c237",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Lagrange Multiplier statistic', np.float64(11.13314950670988)),\n",
+       " ('p-value', np.float64(0.011027248981137657)),\n",
+       " ('f-value', np.float64(3.807356368192804)),\n",
+       " ('f p-value', np.float64(0.010610627224021667))]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 등분산 검정\n",
+    "\n",
+    "name = [\"Lagrange Multiplier statistic\", \"p-value\", \"f-value\", \"f p-value\"]\n",
+    "test = sms.het_breuschpagan(result.resid, result.model.exog)\n",
+    "lzip(name, test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "f826e172",
    "metadata": {},
    "outputs": [],
@@ -643,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "f5418c0c",
    "metadata": {},
    "outputs": [],
@@ -655,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "21f8f324",
    "metadata": {},
    "outputs": [],
@@ -666,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "426069b4",
    "metadata": {},
    "outputs": [
@@ -680,7 +708,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.869\n",
       "Method:                 Least Squares   F-statistic:                     627.8\n",
       "Date:                Fri, 09 Jan 2026   Prob (F-statistic):          3.36e-124\n",
-      "Time:                        17:12:58   Log-Likelihood:                -886.20\n",
+      "Time:                        17:20:45   Log-Likelihood:                -886.20\n",
       "No. Observations:                 285   AIC:                             1780.\n",
       "Df Residuals:                     281   BIC:                             1795.\n",
       "Df Model:                           3                                         \n",
@@ -718,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "adaf1dc9",
    "metadata": {},
    "outputs": [
@@ -731,12 +759,14 @@
        " ('f p-value', np.float64(0.035001556720024786))]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 등분산 검정\n",
+    "\n",
     "name = [\"Lagrange Multiplier statistic\", \"p-value\", \"f-value\", \"f p-value\"]\n",
     "test = sms.het_breuschpagan(result2.resid, result2.model.exog)\n",
     "lzip(name, test)"
@@ -747,12 +777,12 @@
    "id": "5b893652",
    "metadata": {},
    "source": [
-    "등분산이라고 가정"
+    "등분산 기각이지만 등분산이라고 가정"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "7c17aa72",
    "metadata": {},
    "outputs": [
@@ -770,7 +800,7 @@
    "source": [
     "# cook distance를 이용한 이상치 확인\n",
     "\n",
-    "fig = sm.graphics.influence_plot(result, criterion = 'cooks')\n",
+    "fig = sm.graphics.influence_plot(result2, criterion = 'cooks')\n",
     "\n",
     "plt.rc('font', size = 7)\n",
     "fig.tight_layout(pad = 1.0)\n",
